--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "cabot-zombie",
-  "version": "0.1.1",
-  "description": "",
+  "version": "0.1.2",
+  "description": "Automate your configuration of Cabot monitoring",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Rafael Eyng <rafaeleyng@gmail.com> (https://github.com/rafaeleyng)",
-  "license": "MIT",
   "dependencies": {
     "bluebird": "3.4.6",
     "zombie": "5.0.0"
@@ -15,5 +10,18 @@
   "devDependencies": {
     "eslint": "3.9.1",
     "eslint-config-airbnb": "12.0.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rafaeleyng/cabot-zombie.git"
+  },
+  "author": "Rafael Eyng <rafaeleyng@gmail.com> (https://github.com/rafaeleyng)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/rafaeleyng/cabot-zombie/issues"
+  },
+  "homepage": "https://github.com/rafaeleyng/cabot-zombie#readme"
 }
